# hashfix

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
src/: cargo_nix.rs  config.rs  error.rs  fixloop.rs  flake.rs  git.rs  lib.rs  main.rs  parser.rs
