[package]
name = "hashfix"
version = "0.1.1"
edition = "2024"
rust-version = "1.89.0"
description = "Automated crate2nix vs nix fetchgit hash-drift fix-loop"
homepage = "https://github.com/pleme-io/hashfix"
repository = "https://github.com/pleme-io/hashfix"
license = "MIT"
authors = ["pleme-io"]

[lib]
name = "hashfix"
path = "src/lib.rs"

[[bin]]
name = "hashfix"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
shikumi = { git = "https://github.com/pleme-io/shikumi", branch = "main", features = ["cli"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
